--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,13 @@
-version: "3.8"
+version: "3.7"
 
 services:
   db:
-    image: sqlte3
+    image: mysql:5.6
+    environment:
+       MYSQL_DATABASE: 'testdjangodb'
+       MYSQL_USER: 'root'
+       MYSQL_PASSWORD: ''
+       MYSQL_ROOT_PASSWORD: ''
   web:
     build: .
     command: python manage.py runserver 127.0.0.1:8000
